--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "format": "prettier-eslint \"src/**/*.js\""
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.5.10",
+    "@vee-validate/rules": "^4.5.10",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
+    "vee-validate": "^4.5.10",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-loading-overlay": "^5.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
@@ -25,6 +34,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "prettier": "^2.6.1",
+    "prettier-eslint": "^13.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   }
